wonka/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wonka
spec:
  selector:
    app: wonka
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
