wonka/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    #nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    #nginx.ingress.kubernetes.io/secure-backends: "true"
    #nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: wonka
spec:
  ingressClassName: nginx
  rules:
  - host: wonka.dev.holaplex.tools
    http:
      paths:
      - backend:
          service:
            name: wonka
            port:
              number: 3000
        path: /graphql
        pathType: Prefix

  - host: factory.dev.holaplex.tools
    http:
      paths:
      - backend:
          service:
            name: wonka
            port:
              number: 3000
        path: /graphql
        pathType: Prefix
  tls:
  - hosts:
    - factory.dev.holaplex.tools
    - wonka.dev.holaplex.tools
